@@ -70,6 +70,43 @@ Route119_WeatherInstitute_1F_EventScript_Grunt4::
 	msgbox Route119_WeatherInstitute_1F_Text_Grunt4PostBattle, MSGBOX_AUTOCLOSE
 	end
 
+
+SCRIPT_SelfTrade_V1::
+  lock
+  faceplayer
+  msgbox SCRIPT_SelfTrade_Text_IllTradeIfYouWant, MSGBOX_YESNO
+  compare VAR_RESULT, NO
+  goto_if_eq SCRIPT_SelfTrade_DeclineTrade
+  special ChoosePartyMon
+  waitstate
+  compare VAR_0x8004, 255
+  goto_if_eq SCRIPT_SelfTrade_DeclineTrade
+  copyvar VAR_0x8005, VAR_0x8004
+  setvar VAR_0x8004, 6
+  special CreateInGameTradePokemon
+  special DoInGameTradeScene
+  waitstate
+  msgbox SCRIPT_SelfTrade_Text_ComeBack, MSGBOX_DEFAULT
+  release
+  end
+
+SCRIPT_SelfTrade_DeclineTrade::
+  msgbox SCRIPT_SelfTrade_Text_YouDontWantToThatsOkay, MSGBOX_DEFAULT
+  release
+  end
+
+SCRIPT_SelfTrade_Text_IllTradeIfYouWant:
+  .string "I will help you to\n"
+  .string "trade a pokemon\p"
+  .string "with yourself!$"
+
+SCRIPT_SelfTrade_Text_ComeBack:
+  .string "Come back anytime.$"
+
+SCRIPT_SelfTrade_Text_YouDontWantToThatsOkay:
+  .string "You dont want to?\n"
+  .string "Okay come back anytime$"
+
 Route119_WeatherInstitute_1F_Text_Grunt1Intro:
 	.string "The BOSS got interested in\n"
 	.string "the research they have going here,\l"
