@@ -38,3 +38,4 @@ Spread out XP Share
 Add gen 4 style bike
 Scale Mart with badge count
 Buff rivals team to include a Grumpig at Lilycove City battle
+Add trading with self at the Weather Institute
